# lava-test-plans

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  COPYRIGHTS  Dockerfile  Dockerfile.ci-debian  Dockerfile.ci-fedora  LICENSE  Makefile  README.md  fastboot.jinja2  lava-test-plans.spec  lkft-fastboot.jinja2  lkft-metadata.jinja2  lkft-nfs.jinja2  lkft-qemu.jinja2  lkft.jinja2  lt-qcom-fastboot.jinja2  master.jinja2  nfs.jinja2  pre-power-command.jinja2  pyproject.toml  qemu.jinja2  requirements.txt  selftests.sh  submit_for_testing.py  variables-android.ini  variables.ini  variables.yaml  variables_qcom.ini  variables_ti.ini
debian/: changelog  control  gbp.conf  rules
devices/: bcm2711-rpi-4-b  dragonboard-410c  dragonboard-820c  dragonboard-845c  hi6220-hikey  hi6220-hikey-r2  hi960-hikey  hip07-d05  juno  juno-r2  nxp-ls2088  qcs404-evb-1k  qcs404-evb-4k  qemu-i386  qemu_arm  qemu_arm64  qemu_i386  qemu_x86_64  rzn1d  sdm845-mtp  sm8350-mtp  soca9  stm32mp1  stm32mp157c-dk2  synquacer  thunderx  x15  x15-bl  x86
include/: android-boottime-definition.jinja2  fastboot.jinja2  lkft-metadata.jinja2  test_target.jinja2  ti-metadata.jinja2
lava_test_plans/: __init__.py  __main__.py  fastboot.jinja2  master.jinja2  nfs.jinja2  qemu.jinja2  utils.py
test/: test_lava_job_visibility.py  test_lava_tags.py  test_lava_test_plans.py  test_validate_variables.py  variables-invalid.yaml  variables-lkft-android-tuxsuite.ini  variables-tags-one-tag.ini  variables-tags.ini  variables-valid.ini  variables-visibility-one-group.ini  variables-visibility.ini
(+585 files in other folders)
